--- a/config/mutant.yml
+++ b/config/mutant.yml
@@ -1,3 +1,3 @@
 ---
-name: veritas-do-adapter
-namespace: Veritas::Adapter::DataObjects
+name: axiom-do-adapter
+namespace: Axiom::Adapter::DataObjects
