--- a/config/reek.yml
+++ b/config/reek.yml
@@ -1,100 +1,115 @@
 ---
-UncommunicativeParameterName:
-  accept: []
-  exclude: []
+Attribute:
   enabled: true
-  reject:
-  - !ruby/regexp /^.$/
-  - !ruby/regexp /[0-9]$/
-  - !ruby/regexp /[A-Z]/
-LargeClass:
-  max_methods: 19
-  exclude: []
+  exclude:
+  - Veritas::Relation::Gateway
+BooleanParameter:
   enabled: true
-  max_instance_variables: 5
+  exclude: []
+ClassVariable:
+  enabled: true
+  exclude: []
+ControlParameter:
+  enabled: true
+  exclude: []
+DataClump:
+  enabled: true
+  exclude: []
+  max_copies: 2
+  min_clump_size: 2
+DuplicateMethodCall:
+  enabled: true
+  exclude: []
+  max_calls: 1
+  allow_calls: []
+FeatureEnvy:
+  enabled: true
+  exclude:
+  - Veritas::Adapter::DataObjects::Statement#each_row
+  - Veritas::Relation::Gateway#gateway?
+  - Veritas::Relation::Gateway#summarize_merge?
+IrresponsibleModule:
+  enabled: true
+  exclude:
+  - Veritas::Relation
+LongParameterList:
+  enabled: true
+  exclude:
+  - Veritas::Relation::Gateway#binary_operation
+  max_params: 2
+  overrides:
+    initialize:
+      max_params: 3
+LongYieldList:
+  enabled: true
+  exclude: []
+  max_params: 2
+NestedIterators:
+  enabled: true
+  exclude: []
+  max_allowed_nesting: 1
+  ignore_iterators: []
+NilCheck:
+  enabled: true
+  exclude: []
+RepeatedConditional:
+  enabled: true
+  exclude: []
+  max_ifs: 1
+TooManyInstanceVariables:
+  enabled: true
+  exclude: []
+  max_instance_variables: 3
+TooManyMethods:
+  enabled: true
+  exclude:
+  - Veritas::Relation::Gateway
+  max_methods: 10
+TooManyStatements:
+  enabled: true
+  exclude:
+  - Veritas::Adapter::DataObjects#read
+  - Veritas::Adapter::DataObjects::Statement#command
+  - Veritas::Relation::Gateway#forward
+  - Veritas::Relation::Gateway#tuples
+  - each
+  max_statements: 2
 UncommunicativeMethodName:
-  accept: []
-  exclude: []
   enabled: true
+  exclude: []
   reject:
   - !ruby/regexp /^[a-z]$/
   - !ruby/regexp /[0-9]$/
   - !ruby/regexp /[A-Z]/
-LongParameterList:
-  max_params: 3
-  exclude: []
-  enabled: true
-  overrides: {}
-FeatureEnvy:
-  exclude:
-    - Veritas::Adapter::DataObjects::Statement#each_row
-    - Veritas::Relation::Gateway#same_adapter?
-    - Veritas::Relation::Gateway#gateway?
-    - Veritas::Relation::Gateway#summarize_merge?
-    - Veritas::Relation::Gateway#summarize_merge
-  enabled: true
-ClassVariable:
-  exclude: []
-  enabled: true
-BooleanParameter:
-  exclude: []
-  enabled: true
-IrresponsibleModule:
-  exclude: [ 'Veritas::Relation' ]
-  enabled: true
-UncommunicativeModuleName:
   accept: []
-  exclude: []
+UncommunicativeModuleName:
   enabled: true
+  exclude: []
   reject:
   - !ruby/regexp /^.$/
   - !ruby/regexp /[0-9]$/
-NestedIterators:
-  ignore_iterators: []
-  exclude: []
-  enabled: true
-  max_allowed_nesting: 1
-LongMethod:
-  max_statements: 7
-  exclude: []
-  enabled: true
-Duplication:
-  allow_calls: []
-  exclude: []
-  enabled: true
-  max_calls: 1
-UtilityFunction:
-  max_helper_calls: 1
-  exclude: []
-  enabled: true
-Attribute:
-  exclude: []
-  enabled: false
-UncommunicativeVariableName:
   accept: []
-  exclude: []
+UncommunicativeParameterName:
   enabled: true
+  exclude: []
   reject:
   - !ruby/regexp /^.$/
   - !ruby/regexp /[0-9]$/
   - !ruby/regexp /[A-Z]/
-SimulatedPolymorphism:
+  accept: []
+UncommunicativeVariableName:
+  enabled: true
+  exclude: []
+  reject:
+  - !ruby/regexp /^.$/
+  - !ruby/regexp /[0-9]$/
+  - !ruby/regexp /[A-Z]/
+  accept: []
+UnusedParameters:
+  enabled: true
+  exclude: []
+UtilityFunction:
+  enabled: true
   exclude:
-    - Veritas::Relation::Gateway
-  enabled: true
-  max_ifs: 1
-DataClump:
-  exclude: []
-  enabled: true
-  max_copies: 1
-  min_clump_size: 2
-ControlCouple:
-  exclude: []
-  enabled: true
-LongYieldList:
-  max_params: 2
-  exclude: []
-  enabled: true
-NilCheck:
-  enabled: true
-  exclude: []
+  - Veritas::Relation::Gateway#gateway?
+  max_helper_calls: 0
